src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: "yekan";
    src: url(/public/Qs_Iranyekan.ttf);
  }
}

.mainGradient {
  background-image: linear-gradient(
    95.97deg,
    rgb(255, 171, 11) 15.07%,
    rgb(249, 113, 17) 100.37%
  );
}

.updateGradient {
  background-image: linear-gradient(
    95.97deg,
    rgb(11, 166, 255) 15.07%,
    rgb(17, 90, 249) 100.37%
  );
}

.custom-scrollbar::-webkit-scrollbar {
  width: 10px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: #f1f1f1;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 10px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #555;
}

:root {
  --toastify-font-family: yekan;
}

